--- a/code/src/newthought.css
+++ b/code/src/newthought.css
@@ -1,12 +1,12 @@
 .thought-question {
   margin-top: 0;
   font-size: 10px;
+  font-weight: bolder;
 }
 
 .text-field {
   width: 96%;
   padding: 4px;
   resize: none;
-  font-size: 11px;
-  font-weight: bold;
+  font-size: 10px;
 }
