--- a/code/src/thoughtcard.css
+++ b/code/src/thoughtcard.css
@@ -2,10 +2,9 @@
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: 70% 30%;
-  width: 100%;
-  max-width: 280px;
+  width: 280px;
   min-height: 80px;
-  margin: 20px;
+  margin-bottom: 20px;
   padding: 15px;
   border: 1px solid #000;
   -webkit-box-shadow: 6px 6px #000;
@@ -18,7 +17,7 @@
   grid-column-end: 3;
   margin: 0;
   padding-bottom: 10px;
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .heart-container {
