--- a/code/src/thoughtform.css
+++ b/code/src/thoughtform.css
@@ -3,10 +3,9 @@
   grid-template-columns: 50% 50%;
   grid-template-rows: 60% 25%;
   row-gap: 15px;
-  width: 100%;
-  max-width: 280px;
+  width: 280px;
   height: 120px;
-  margin: 20px;
+  margin-bottom: 20px;
   padding: 15px;
   border: 1px solid #000;
   -webkit-box-shadow: 6px 6px #000;
@@ -30,5 +29,6 @@
   border-radius: 50px;
   background: #ffadad;
   font-size: 10px;
+  font-weight: bolder;
 }
 
