--- a/code/src/Components/heartButton.css
+++ b/code/src/Components/heartButton.css
@@ -14,6 +14,10 @@
   -o-border-radius: 50%;
 }
 
+.heart-count-btn:focus {
+  outline: none;
+}
+
 .counter {
   color: #b0b0b0;
   font-size: 0.8em;
