--- a/code/src/scss/style.scss
+++ b/code/src/scss/style.scss
@@ -1,3 +1,4 @@
+$lightgrey-background-color: #f2f0f0;
 $grey-circle-color: #eaeaea;
 $grey-transparent-color: rgba(228, 226, 226, 0.5);
 $darkgrey-circle-color: #acacac;
@@ -14,9 +15,8 @@ $darkblue-border-color: #3cc068;
 
 body {
 	background: #fff;
-	font-family: monospace;
+	font-family: 'Arimo', sans-serif;
 	line-height: 1.6;
-
 	margin: 0;
 }
 
@@ -30,14 +30,33 @@ h1 {
 	z-index: 10;
 }
 
-.p-red {
-	color: $darkred-border-color;
+p {
+	font-size: 14px;
+}
+
+%p-shared {
 	font-weight: 700;
+	font-family: 'Arimo', sans-serif;
+	font-size: 12px;
+}
+.p-header {
+	letter-spacing: 1px;
+}
+.p-message-count {
+	@extend %p-shared;
+}
+.p-thoughts {
+	font-family: 'Inconsolata', monospace;
+}
+
+.p-red {
+	@extend %p-shared;
+	color: $darkred-border-color;
 }
 
 .p-blue {
+	@extend %p-shared;
 	color: $darkblue-border-color;
-	font-weight: 700;
 }
 
 .header {
@@ -63,7 +82,6 @@ h1 {
 %thoughts-shared {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
 	width: 400px;
 
 	margin: 20px auto;
@@ -86,7 +104,9 @@ h1 {
 
 .send-thought-container {
 	@extend %thoughts-shared;
-	height: 170px;
+	justify-content: space-around;
+	height: 165px;
+	background-color: $lightgrey-background-color;
 }
 
 .btn-and-count-container {
@@ -98,15 +118,18 @@ h1 {
 form {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: space-between;
 	height: 80%;
 }
 
 .thought-input {
-	height: 60px;
+	height: 65px;
 	border: 1px solid rgba(0, 0, 0, 0.534);
 	padding: 5px;
 	font-family: monospace;
+	font-size: 13px;
+	resize: none;
+	margin: 5px 0 10px;
 }
 
 .two-hearts-button {
@@ -119,15 +142,16 @@ form {
 
 .thought-container {
 	@extend %thoughts-shared;
-	height: 130px;
+	justify-content: space-between;
+	height: 135px;
 }
 
 .icon-container {
 	display: flex;
 	justify-content: space-between;
-	align-items: center;
+	align-items: flex-end;
 
-	div {
+	.heart-container {
 		display: flex;
 		align-items: center;
 		flex-direction: row;
@@ -157,8 +181,20 @@ form {
 	background-color: $darkpink-circle-color;
 }
 
-.amount-of-hearts {
+.all-likes {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
 	margin-left: 5px;
+	font-size: 12px;
+}
+
+.your-likes {
+	opacity: 0.5;
+	line-height: 5px;
+}
+
+.amount-of-hearts {
 	opacity: 0.5;
 }
 
@@ -169,4 +205,5 @@ form {
 
 .time-gone-by {
 	opacity: 0.3;
+	font-size: 12px;
 }
