--- a/code/src/css/app.css
+++ b/code/src/css/app.css
@@ -29,6 +29,7 @@ button {
   width: 90%;
   max-width: 768px;
   margin: auto;
+  padding-right: .3rem;
 }
 
 .thoughts-container {
@@ -44,6 +45,7 @@ button {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: center;
 
   margin-top: 2.5rem;
   padding: .5rem 1rem 1rem;
@@ -92,7 +94,7 @@ button {
 
 .post-thought {
   flex-direction: column;
-  align-items: flex-start;
+  /* align-items: flex-start; */
   padding: 1.5rem 1rem;
   background-color: var(--color-lightGray);
 }
