--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,8 +1,8 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family:'Cutive Mono', monospace, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
   "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-  sans-serif;
+  sans-serif; 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -19,8 +19,9 @@ code {
 }
 
 .HappyThoughtsCard{
-  width: 90%;
-  border: solid 1px rgb(235, 235, 64);
+  
+  border: solid 1px rgb(114, 114, 110);
+  background-color: rgb(228, 224, 224);
   margin: 4px;
   display: flex;
   flex-direction: column;
@@ -31,12 +32,20 @@ code {
 li {
   list-style: none;
 }
+label {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
 
 .HappyThoughtInput {
-  width: 90%;
-  border: solid 1px rgb(235, 235, 64);
+  
+  border: solid 1px rgb(114, 114, 110);
+  background-color: rgb(228, 224, 224);
   margin: 4px;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  
+}
+.SubmitButton {
+  margin: 10px;
 }
