--- a/code/src/app.scss
+++ b/code/src/app.scss
@@ -89,11 +89,21 @@ label {
 textarea {
   width: 100%;
   height: 60px;
-  margin: 1rem 0;
+  margin-top: 1rem;
   padding: .6rem .8rem;
   font-family: inherit;
   resize: none;
   border: 1px solid $color-darkGray;
+}
+
+.error {
+  color: $color-darkGray;
+}
+
+.char-count {
+  text-align: right;
+  font-size: .8rem;
+  color: $color-darkGray;
 }
 
 .post-btn {
