--- a/code/src/app.css
+++ b/code/src/app.css
@@ -7,6 +7,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
   align-items: center;
+  width: 100%;
+}
+
+footer {
+  font-size: 12px;
+  padding: 20px;
 }
