--- a/code/src/components/heart.css
+++ b/code/src/components/heart.css
@@ -3,9 +3,16 @@
   border-radius: 50%;
   padding: 8px;
   margin: 7px;
-  cursor: pointer;
   outline: none;
   background-color: #F2B3B9;
+  transition: transform 1s;
+}
+
+.heartButton:hover {
+  cursor: pointer;
+  opacity: 0.8;
+  transform: scale(1.1);
+
 }
 
 .heartButton span {
