--- a/code/src/MessageInput.css
+++ b/code/src/MessageInput.css
@@ -31,7 +31,7 @@ form {
 
 .form-button {
   width: 200px;
-  margin: 15px auto;
+  margin: 0 0 20px 20px;
   border: none;
   height: 30px;
   border-radius: 50px;
@@ -41,4 +41,10 @@ form {
 
 .label-input {
   margin: 0 30px 10px 30px;
+}
+
+.char-count {
+  text-align: center;
+  font-size: 12px;
+  color: gray;
 }
