--- a/code/src/thoughts.css
+++ b/code/src/thoughts.css
@@ -50,7 +50,13 @@ button {
 }
 
 .heart-button {
-  background: rgba(165, 164, 164, 0.514);
+  background: rgba(134, 105, 126, 0.479);
   padding: 8px;
   border-radius: 50%;
 }
+
+/* @media only screen and (max-width: 600px) {
+  .thoughts{
+    width: 100%;
+  }
+} */
