--- a/code/src/Components/heartButton.css
+++ b/code/src/Components/heartButton.css
@@ -4,9 +4,12 @@
 
 .heart-count-btn {
   background-color: #d1d1d1;
+  display: flex;
+  justify-content: center;
+  padding-left: 1em;
   border: none;
-  width: 40px;
-  height: 40px;
+  width: 4em;
+  height: 4em;
   border-radius: 50%;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
