--- a/code/src/form.css
+++ b/code/src/form.css
@@ -1,11 +1,17 @@
+body {
+  font-family: 'Courier New', Courier, monospace;
+  
+}
 form{
-  height:150px;
+  height:200px;
   max-width:500px;
   border:solid 1px;
   padding:20px;
   margin-left:auto;
   margin-right:auto;
   margin-top:30px;
+  box-shadow: 8px 9px 0px -1px rgb(39, 39, 39);
+  background-color: rgb(252, 251, 248);
 }
 input {
   display:flex;
@@ -13,12 +19,33 @@ input {
   height:50px;
   width:450px;
   margin-top:20px;
-
+  font-size: 18px;
+  border-radius: 5px;
+  
 }
-button {
-  width:150px;
+
+.button {
+  font-family: 'Courier New', Courier, monospace;
+  
+  width:300px;
+  height:70px;
+  border-radius: 30px;
+  font-size:18px;
+  font-weight: bold;
   background-color: lightpink;
-  margin-top: 20px;
+  color:#fff;
+  margin-top: 40px;
   border:none;
-  height:35px;
+  
+}
+.message {
+  font-weight: 550;
+  font-size: 20px;
+  background-color: rgb(252, 251, 248);
+}
+.messageTime {
+  font-size: 18px;
+  font-weight:300;
+  font-style:italic;
+  margin-left:10px;
 }
