--- a/code/src/Components/heartButton.css
+++ b/code/src/Components/heartButton.css
@@ -25,6 +25,10 @@
   background-color: #FFAEAC;
 }
 
+.heart-count-btn:visited {
+  background-color: #FFAEAC;
+}
+
 .heart-count-btn:focus {
   outline: none;
 }
