--- a/code/src/components/messageinput_style.css
+++ b/code/src/components/messageinput_style.css
@@ -15,21 +15,44 @@
   margin: 20px 0;
   padding: 15px;
   width: 50%;
-  /* height: 100%; */
-  height: 100px;
+  height: 100%;
+  /* height: 100px; */
   background-color: rgb(226, 234, 242);
 }
 
 .form-text {
-  width: 100%;
-  height: 30px;
+  width: 98%;
+  height: 35px;
 }
 
-.form-button {
+/* .form-button {
   margin-top: 10px;
+  border: none;
+  cursor: pointer;
+  background: rgb(232, 224, 237);
+  border-radius: 30%;
+  padding: 10px 20px;
+  margin: 10px;
+} */
+
+.submit-button {
+  /* border: 1px solid rgb(175, 165, 182); */
+  border: none;
+  /* box-shadow: 2px 3px; */
+  border-radius: 30px;
+  cursor: pointer;
+  margin-top: 10px;
+  /* margin-bottom: 10px; */
+  /* padding: 8px; */
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: rgb(242, 234, 254);
+  font-weight: 700;
+  font-size: 12px;
 }
 
 p {
   margin-top: 0px;
-  font-size: small;
+  font-size: 16px;
+  font-weight: 700;
 }
