--- a/code/src/index.css
+++ b/code/src/index.css
@@ -49,3 +49,13 @@ label {
 .SubmitButton {
   margin: 10px;
 }
+
+.visually-hidden {
+  position: absolute !important;
+  height: 1px; 
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  white-space: nowrap; 
+}
