--- a/code/src/components/messageinput_style.css
+++ b/code/src/components/messageinput_style.css
@@ -17,7 +17,7 @@
   width: 50%;
   height: 100%;
   /* height: 100px; */
-  background-color: rgb(226, 234, 242);
+  background-color: rgb(228, 226, 242);
 }
 
 .form-text {
@@ -38,7 +38,7 @@
 .submit-button {
   /* border: 1px solid rgb(175, 165, 182); */
   border: none;
-  /* box-shadow: 2px 3px; */
+  box-shadow: 1px 2px rgba(165, 153, 186, 0.598);
   border-radius: 30px;
   cursor: pointer;
   margin-top: 10px;
@@ -46,9 +46,15 @@
   /* padding: 8px; */
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: rgb(242, 234, 254);
+  background-color: rgb(226, 212, 255);
   font-weight: 700;
   font-size: 12px;
+}
+.submit-button:hover {
+  background-color: rgb(224, 207, 250);
+  /* box-shadow: 1px 2px rgba(165, 153, 186, 0.598); */
+
+
 }
 
 p {
