--- a/code/src/components/messageinput_style.css
+++ b/code/src/components/messageinput_style.css
@@ -15,14 +15,23 @@
   margin: 20px 0;
   padding: 15px;
   width: 50%;
+  max-width: 400px;
   height: 100%;
   /* height: 100px; */
-  background-color: rgb(228, 226, 242);
+  /* background-color: rgb(228, 226, 242); */
+  background-color: rgb(248, 219, 255);
+}
+.banana-container {
+  text-align: center;
+  padding-top: 10px;
 }
 
 .form-text {
-  width: 98%;
-  height: 35px;
+  width: 95%;
+  height: 30px;
+  font-weight: 500;
+  font-size: 12px;
+  padding: 8px;
 }
 
 /* .form-button {
@@ -46,19 +55,30 @@
   /* padding: 8px; */
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: rgb(226, 212, 255);
+  
   font-weight: 700;
   font-size: 12px;
+  background-color: rgb(246, 228, 254);
 }
 .submit-button:hover {
-  background-color: rgb(224, 207, 250);
+  background-color: rgb(242, 217, 252);
+  box-shadow: 1px 2px rgba(165, 153, 186, 0.598);
+
   /* box-shadow: 1px 2px rgba(165, 153, 186, 0.598); */
 
 
 }
 
-p {
+h3 {
   margin-top: 0px;
   font-size: 16px;
   font-weight: 700;
+}
+
+.counter {
+  margin: 0px;
+  font-size: 10px;
+  font-weight: 300;
+  text-align: right;
+  color: dimgray;
 }
