--- a/code/src/components/thoughts_style.css
+++ b/code/src/components/thoughts_style.css
@@ -15,6 +15,7 @@
   margin: 20px 0;
   padding: 15px;
   width: 50%;
+  max-width: 400px;
   height: 100%;
   background-color: rgb(255, 255, 255);
 
@@ -35,11 +36,14 @@
 .message-time {
   color: grey;
   text-align: right;
-  font-size: 12px;
+  font-size: 11px;
 }
 
 .message-likes {
   padding-top: 20px;
   color: grey;
   font-size: 12px;
+}
+.message-likes span {
+  margin-left: 5px;
 }
