--- a/code/src/thoughts.css
+++ b/code/src/thoughts.css
@@ -1,5 +1,5 @@
 .thoughts {
-  width: 40%;
+width: 80%;
 background-color: rgb(255, 255, 255);
 margin: 10px auto;
 }
@@ -19,10 +19,7 @@ margin: 10px auto;
   border: solid rgb(179, 177, 177) 1px;
   align-items: center;
   height: 150px
-
 }
-
-
 
 .thought {
   margin:20px;
@@ -55,8 +52,13 @@ button {
   border-radius: 50%;
 }
 
-/* @media only screen and (max-width: 600px) {
+.heart-button:hover {
+  transform: scale(1.1);
+  opacity: 0.9;
+}
+
+@media only screen and (min-width: 1000px) {
   .thoughts{
-    width: 100%;
+    width: 40%;
   }
-} */
+}
