--- a/code/src/like-button.css
+++ b/code/src/like-button.css
@@ -1,3 +1,12 @@
+button {
+  width: 42px;
+  height: 42px;
+  border: none;
+  margin: 4px;
+  border-radius: 50%;
+  background-color: #eaeaea;
+}
+
 .heartIcon {
-  height: 26px;
+  height: 18px;
 }
