Stretch goal count my likes

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -65,6 +65,7 @@ h1 {
   flex-direction: row-reverse;
   justify-content: space-between;
   margin-bottom: 20px;
+  font-size: 16px;
 }
 
 .message-time {
