--- a/code/src/components/form.css
+++ b/code/src/components/form.css
@@ -2,7 +2,7 @@ form {
 display: flex;
 flex-direction: column;
 padding: 20px;
-background-color: #eceae7;
+background-color: #f0f0f0;
 width: 70%;
 }
 
