--- a/code/src/components/thoughtslist.css
+++ b/code/src/components/thoughtslist.css
@@ -28,7 +28,7 @@
 .likes-counter {
   margin-left: 5px;
   color: 
-  #8f8f8f;
+  #6e6e6e;
   font-size: 11px;
 }
 
@@ -36,6 +36,6 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  color: #c9c9c9;
+  color: #6e6e6e;
   font-size: 11px;
 }
