--- a/code/src/components/card.css
+++ b/code/src/components/card.css
@@ -17,14 +17,18 @@
     grid-column: 1 / 2;
     display: flex;
 }
+
 .card p:nth-child(1) {
     color: black;
+    max-width: 90%;
+    word-break: break-all;
 }
 
 .messsage {
     grid-row: 1 / 2;
     grid-column: 1 / 3;
     color: black;
+    overflow-x: hidden;
 }
 
 .liked {
@@ -53,7 +57,6 @@
 .heart:active {
     background-color:lightcoral;
 }
-.heart:disabled {
-    background-color: pink;
-    color: #C88691;
+.liked {
+    background-color: lightcoral;
 }
