Added variable to check message length & overflow styles to deal with word break

--- a/code/src/app.scss
+++ b/code/src/app.scss
@@ -122,6 +122,8 @@ textarea {
 .thought-card {
   h2 {
     flex-basis: 100%;
+    word-break: break-word;
+    hyphens: auto;
   }
   .likes {
     flex: 0 1 auto;
