--- a/code/src/thoughts.css
+++ b/code/src/thoughts.css
@@ -22,12 +22,14 @@ margin: 10px auto;
 }
 
 .thought {
-  margin:20px;
+  margin:20px 20px auto 20px;
   display: flex;
   flex-direction: column;
   height: 150px;
   width:90%;
   justify-content: space-between;
+  overflow-wrap: break-word;
+  
 }
 
 .time-and-likes {
@@ -56,6 +58,16 @@ button {
   transform: scale(1.1);
   opacity: 0.9;
 }
+
+.liked {
+  background-color: rgba(253, 174, 229, 0.896);
+}
+
+.notLiked {
+  background-color: rgba(134, 105, 126, 0.279);
+}
+
+
 
 @media only screen and (min-width: 1000px) {
   .thoughts{
