--- a/code/src/app.scss
+++ b/code/src/app.scss
@@ -102,7 +102,7 @@ textarea {
 
 .char-count {
   text-align: right;
-  font-size: .8rem;
+  font-size: .75rem;
   color: $color-darkGray;
 }
 
@@ -114,6 +114,11 @@ textarea {
   font-size: inherit;
   font-weight: 500;
   border: 0;
+}
+
+button:disabled {
+  color: inherit;
+  opacity: .5;
 }
 
 
