--- a/code/src/message-list.css
+++ b/code/src/message-list.css
@@ -9,6 +9,7 @@
     padding: 16px;
     margin: 8px;
     width: 80%;
+    overflow-wrap: break-word;
     border: 1px solid black;
     box-shadow: 6px 6px black;
    }
