Made the button on the form disabled if there are not 5 or more characters typed in the textarea. Changed all quotation marks into single quotes

--- a/code/src/Components/heartButton.css
+++ b/code/src/Components/heartButton.css
@@ -6,7 +6,8 @@
   background-color: #d1d1d1;
   display: flex;
   justify-content: center;
-  padding-left: 1em;
+  padding-left: 0.7em;
+  padding-top: 0.4em;
   border: none;
   width: 4em;
   height: 4em;
