--- a/code/src/Components/thoughts.css
+++ b/code/src/Components/thoughts.css
@@ -1,14 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
 
 .thoughts-card {
-  /* background-color: #f2f2f2; */
   width: 500px;
   margin: 1em;
   padding: 1.3em 1em 2em 1em;
   border: 2px solid black;
   box-shadow: 6px 6px black;
   font-family: 'Roboto Mono', monospace;
-  
+  overflow-wrap: break-word;
 }
 
 .hearts-time-container {
