added message displayed when thoughts are loaded to Thoughts component

--- a/code/src/components/thoughts.css
+++ b/code/src/components/thoughts.css
@@ -6,3 +6,9 @@
 .thoughts-container {
   width: fit-content;
 }
+
+.loading-thoughts {
+  margin: 40px 0;
+  font-size: 14px;
+  text-align: center;
+}
