--- a/code/src/components/thoughtcard.css
+++ b/code/src/components/thoughtcard.css
@@ -1,4 +1,4 @@
-.toughtCard {
+.thoughtCard {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -11,7 +11,7 @@
   box-shadow: 10px 10px;
 }
 
-.toughtCardDetails {
+.thoughtCardDetails {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -19,14 +19,14 @@
   width: 40vw;
 }
 
-.toughtCardLike {
+.thoughtCardLike {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-left: 16px;
 }
 
-.toughtCardLikeIcon {
+.thoughtCardLikeIcon {
   cursor: pointer;
   padding: 8px;
   margin-right: 6px;
@@ -34,7 +34,7 @@
   background-color: rgb(199, 199, 199);
 }
 
-.toughtCardLikeIcon:hover {
+.thoughtCardLikeIcon:hover {
   animation: pulse 1s infinite;
   animation-timing-function: linear;
   background-color: #FFADAD;
@@ -47,6 +47,6 @@
   }
 }
 
-.toughtText {
+.thoughtText {
   margin: 16px;
 }
